Co-op Input test functionality ported over to this project.
Co-op functionality for creating characters and giving them input via number of player starts ported over into this project's base thirdperson game mode.

BP_Camera ported over from co-op input test project.
BP_Camera_Rot_Trigger ported over from co-op input test.
BP_ThirdPersonCharacter ported over from co-op input test.
Rot_Indicator_Test texture ported over from co-op input test and WBP_Rot_Indicator also ported over.

All co-op functionality that was ported over is working just need to sort out the omni-directional movement animations.

More folder organisation.

--- a/Reign_of_the_Abyss/Config/DefaultEngine.ini
+++ b/Reign_of_the_Abyss/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=Reign_of_the_Abyss
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
