Started on player animation blueprint. Put lots of empty text files in currently empty folders in an attempt to push these currently empty folders to the repo.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -192,6 +192,33 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=AnimSyncMarkerList
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=PlatformTargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=HasParentAsset
+SequenceBrowser.HiddenColumns=AnimNotifyList
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/Levels_Maps/ThirdPersonMap
@@ -330,15 +357,26 @@ CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
+CharacterMovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" "
+NavMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
+PersonaPreviewSceneDescription="\"Object\" "
+PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+AssetViewerSettings="\"Object\" "
+ABP_Player_C="\"Object\" "
+AnimInstance="\"Object\" "
+ABP_Manny_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 
 [MessageLog]
 LastLogListing=AssetCheck
@@ -348,12 +386,13 @@ LastLogListing=AssetCheck
 /Game/Levels_Maps=(R=0.000000,G=0.238028,B=0.467784,A=1.000000)
 /Game/Player=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
 /Game/Enemies=(R=0.467784,G=0.000000,B=0.023424,A=1.000000)
-/Game/Assets/Animations=(R=0.126078,G=0.000000,B=0.467784,A=1.000000)
+/Game/Assets/Textures=(R=0.261722,G=0.467784,B=0.000000,A=1.000000)
 /Game/Modes_Instances=(R=0.358818,G=0.345576,B=0.467784,A=1.000000)
 /Game/SFX=(R=0.000000,G=0.467784,B=0.393526,A=1.000000)
 /Game/UI=(R=0.261722,G=0.467784,B=0.000000,A=1.000000)
 /Game/VFX=(R=0.467784,G=0.342410,B=0.000000,A=1.000000)
 /Game/Weapons=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
+/Game/Modes_Instances/Modes=(R=0.000000,G=0.467784,B=0.090252,A=1.000000)
 /Game/Assets/Level=(R=0.000000,G=0.238028,B=0.467784,A=1.000000)
 /Game/Assets/Materials=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
 /Game/Assets/Skeletal_Meshes=(R=0.467784,G=0.000000,B=0.023424,A=1.000000)
@@ -398,6 +437,14 @@ LastLogListing=AssetCheck
 /Game/Player/Input/IMCs=(R=0.467784,G=0.000000,B=0.023424,A=1.000000)
 /Game/Co-op=(R=0.126078,G=0.000000,B=0.467784,A=1.000000)
 /Game/Co-op/BPs=(R=0.467784,G=0.342410,B=0.000000,A=1.000000)
+/Game/Modes_Instances/Instances=(R=0.467784,G=0.000000,B=0.023424,A=1.000000)
+/Game/Assets/Animations=(R=0.126078,G=0.000000,B=0.467784,A=1.000000)
+/Game/Assets=(R=0.249029,G=0.000000,B=0.467784,A=1.000000)
+/Game/UI/World=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
+/Game/Assets/Animations/ABPs=(R=0.467784,G=0.342410,B=0.000000,A=1.000000)
+/Game/Assets/Animations/Aim_Offsets=(R=0.000000,G=0.238028,B=0.467784,A=1.000000)
+/Game/Assets/Animations/Assets=(R=0.467784,G=0.000000,B=0.023424,A=1.000000)
+/Game/Assets/Animations/Blend_Spaces=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -629,7 +676,7 @@ TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
-UMGEditorProjectSettings.Designer =True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -839,6 +886,84 @@ SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
 SkeletalMeshComponent.Materials=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement: Gravity=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+ABP_Player_C.RootMotion=True
+ABP_Player_C.Notifies=True
+ABP_Player_C.Montage=True
+ABP_Manny_C.Essential Movement Data=True
+ABP_Manny_C.EssentialMovementData=True
+ABP_Manny_C.RootMotion=True
+ABP_Manny_C.Notifies=True
+ABP_Manny_C.Montage=True
+ABP_Manny_C.References=True
+ABP_Player_C.Default=True
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails
@@ -962,15 +1087,20 @@ GameMapsSettings=True
 GameMapsSettings.DefaultModes=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem1=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem2=/Game/Levels_Maps/ThirdPersonMap
+MRUItem0=/Game/UE_Content/Characters/Mannequins/Animations/ABP_Manny
+MRUItem1=/Game/Assets/Animations/ABPs/ABP_Player
+MRUItem2=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem3=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem4=/Game/Levels_Maps/ThirdPersonMap
 
 [PlacementMode]
 RecentlyPlaced=/Game/BP_Camera.BP_Camera;
 
 [AssetEditorToolkitTabLocation]
 /Game/Modes_Instances/Modes/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
+/Game/Assets/Animations/ABPs/ABP_Player.ABP_Player=1
+/Game/UE_Content/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1021,4 +1151,11 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
