Footfalls component implemented. Bloodsplosion content implemented. Blood splatter content implemented.
Footfalls component imported from Organic Dungeon V2 project that will play sound effects for character footsteps and create niagara particles on footstep depending on given foot bone for the character in the footsteps component.

Bloodsplosion content imported from Organic Dungeon V2 which will be used for enemy death.

Blood splatter content imported from Organic Dungeon V2 which will be used for characters getting hit.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -384,32 +384,39 @@ AnimGraphNode_BlendSpaceBase="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimGraphNode_BlendSpaceGraph="\"Object\" "
 AnimGraphNode_BlendSpaceGraphBase="\"Object\" "
+InputMappingContext="\"Object\" "
+InputAction="\"Object\" "
+BPC_Footfalls_C="\"Object\" \"Object.Bones.Feet_Bones\" \"Object.Bones.Bone - Played Sound\" "
+BillboardComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Assets/Animations/ABPs/ABP_Player.ABP_Player
-OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion
 
 [MessageLog]
-LastLogListing=AssetCheck
+LastLogListing=BlueprintLog
 
 [PathColor]
 /Game/UE_Content=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
@@ -999,6 +1006,66 @@ PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 BP_ThirdPersonCharacter_C.Materials=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
+BP_BloodSplosion_C.Default=True
+BP_BloodSplosion_C.Tick=True
+BP_BloodSplosion_C.Replication=True
+BP_BloodSplosion_C.Rendering=True
+BP_BloodSplosion_C.Collision=True
+BP_BloodSplosion_C.Actor=True
+BP_BloodSplosion_C.Input=True
+BP_BloodSplosion_C.HLOD=True
+BP_BloodSplosion_C.Physics=True
+BP_BloodSplosion_C.WorldPartition=True
+BP_BloodSplosion_C.Events=True
+BP_Blood_Drops_C.Default=True
+BP_Blood_Drops_C.Tick=True
+BP_Blood_Drops_C.Replication=True
+BP_Blood_Drops_C.Rendering=True
+BP_Blood_Drops_C.Collision=True
+BP_Blood_Drops_C.Actor=True
+BP_Blood_Drops_C.Input=True
+BP_Blood_Drops_C.HLOD=True
+BP_Blood_Drops_C.Physics=True
+BP_Blood_Drops_C.WorldPartition=True
+BP_Blood_Drops_C.Events=True
+BPC_Footfalls_C.ComponentTick=True
+BPC_Footfalls_C.Trace=True
+BPC_Footfalls_C.Bones=True
+BPC_Footfalls_C.Sound=True
+BPC_Footfalls_C.Tags=True
+BPC_Footfalls_C.ComponentReplication=True
+BPC_Footfalls_C.Activation=True
+BPC_Footfalls_C.Variable=True
+BPC_Footfalls_C.Cooking=True
+BPC_Footfalls_C.Sockets=True
+BPC_Footfalls_C.Default=True
+BPC_Footfalls_C.Events=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Niagara=True
+NiagaraActor.NiagaraComponent_Parameters=True
+NiagaraActor.NiagaraComponent_Utilities=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Warmup=True
+NiagaraActor.Rendering=True
+NiagaraActor.Compilation=True
+NiagaraActor.HLOD=True
+NiagaraActor.PathTracing=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.Physics=True
+NiagaraActor.Networking=True
+NiagaraActor.WorldPartition=True
+NiagaraActor.Actor=True
+BP_BloodSplosion_C.TransformCommon=True
+BP_BloodSplosion_C.Networking=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1157,6 +1224,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,AnimGraphNode_BlendSpaceGraph.Blend Space.None
 AnimGraphNode_BlendSpaceGraph=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,AnimGraphNode_BlendSpaceGraph.Blend Space.None
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Look.IA_Look
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1166,25 +1234,32 @@ GameMapsSettings=True
 GameMapsSettings.DefaultModes=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem1=/Game/Assets/Animations/ABPs/ABP_Player
-MRUItem2=/Game/Assets/Animations/Blend_Spaces/BS_Lcomotion
-MRUItem3=/Game/Assets/Animations/Assets/RunningBackward_UE
-MRUItem4=/Game/Assets/Animations/Assets/RightStrafeWalking_UE
-MRUItem5=/Game/Assets/Animations/Assets/RightStrafe_UE
-MRUItem6=/Game/Assets/Animations/Assets/LeftStrafeWalking_UE
-MRUItem7=/Game/Assets/Animations/Assets/LeftStrafe_UE
-MRUItem8=/Game/Assets/Animations/Assets/JogForwardDiagonalRight_UE
-MRUItem9=/Game/Assets/Animations/Assets/WalkingBackwards_UE
-MRUItem10=/Game/Assets/Animations/Assets/JogForwardDiagonalLeft_UE
-MRUItem11=/Game/Assets/Animations/Assets/JogBackwardDiagonalRight_UE
-MRUItem12=/Game/Assets/Animations/Assets/JogBackwardDiagonalLeft_UE
-MRUItem13=/Game/Assets/Animations/Assets/Idle_UE
-MRUItem14=/Game/UE_Content/Characters/Mannequins/Animations/ABP_Manny
-MRUItem15=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem16=/Game/Levels_Maps/ThirdPersonMap
+MRUItem0=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion
+MRUItem1=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem2=/Game/VFX/Footsteps/BPC_Footfalls
+MRUItem3=/Game/VFX/Blood_Splatter/BPS/BP_Blood_Drops
+MRUItem4=/Game/Player/Input/IMCs/IMC_Default
+MRUItem5=/Game/Assets/Animations/ABPs/ABP_Player
+MRUItem6=/Game/Assets/Animations/Blend_Spaces/BS_Lcomotion
+MRUItem7=/Game/Assets/Animations/Assets/RunningBackward_UE
+MRUItem8=/Game/Assets/Animations/Assets/RightStrafeWalking_UE
+MRUItem9=/Game/Assets/Animations/Assets/RightStrafe_UE
+MRUItem10=/Game/Assets/Animations/Assets/LeftStrafeWalking_UE
+MRUItem11=/Game/Assets/Animations/Assets/LeftStrafe_UE
+MRUItem12=/Game/Assets/Animations/Assets/JogForwardDiagonalRight_UE
+MRUItem13=/Game/Assets/Animations/Assets/WalkingBackwards_UE
+MRUItem14=/Game/Assets/Animations/Assets/JogForwardDiagonalLeft_UE
+MRUItem15=/Game/Assets/Animations/Assets/JogBackwardDiagonalRight_UE
+MRUItem16=/Game/Assets/Animations/Assets/JogBackwardDiagonalLeft_UE
+MRUItem17=/Game/Assets/Animations/Assets/Idle_UE
+MRUItem18=/Game/UE_Content/Characters/Mannequins/Animations/ABP_Manny
+MRUItem19=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem20=/Game/Levels_Maps/ThirdPersonMap
 
 [PlacementMode]
+RecentlyPlaced=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion;
+RecentlyPlaced=/Game/VFX/Bloodsplosion/Niagara/NS_Bloodsplosion.NS_Bloodsplosion;
+RecentlyPlaced=/Game/VFX/Blood_Splatter/Niagara/NS_Blood_Effect.NS_Blood_Effect;
 RecentlyPlaced=/Game/BP_Camera.BP_Camera;
 
 [AssetEditorToolkitTabLocation]
@@ -1196,6 +1271,9 @@ RecentlyPlaced=/Game/BP_Camera.BP_Camera;
 /Game/Assets/Animations/Assets/JogBackwardDiagonalLeft_UE.JogBackwardDiagonalLeft_UE=1
 /Game/Assets/Animations/Assets/RunningBackward_UE.RunningBackward_UE=1
 /Game/Assets/Animations/Blend_Spaces/BS_Lcomotion.BS_Lcomotion=1
+/Game/Player/Input/IMCs/IMC_Default.IMC_Default=1
+/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion=1
+/Game/VFX/Blood_Splatter/BPS/BP_Blood_Drops.BP_Blood_Drops=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
