Reorganised some things in the combat section. More setup for combat.
Did a little reorganising of the combat section of the folders.

Created a new struct for general weapon info containing the name (which is a newly created enum for all weapon names) as well as whether it is ranged as a bool.

New enums: weapon names, melee weapon names, ranged weapon names.

New struct for ranged weapon info.

New component for spells that will be on characters that can use spells allowing them to switch between spells etc and get the currently equipped spell (think of it as an armoury component).

New interface for characters that have weapons: BPI_Has_Weapon which will allow for easy retrieval of the currently equipped weapon independent of if it is ranged or not which will allow for easy retrieval of the general info of the weapon to determine its name and if it is ranged.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -422,12 +422,26 @@ NiagaraBakerOutputTexture2D="\"Object\" "
 NiagaraBakerOutput="\"Object\" "
 NiagaraSystem="\"Object\" "
 FXSystemAsset="\"Object\" "
+BPC_Ranged_Attack_C="\"Object\" "
+BPC_AttackHandler_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -446,17 +460,17 @@ RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=AnimationEditor
+OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons.DT_MeleeWeapons
+OpenAssetsAtExit=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons.Struct_Ranged_Weapons
+OpenAssetsAtExit=/Game/Combat/Weapons/Enums/Enum_Weapon_Names.Enum_Weapon_Names
+OpenAssetsAtExit=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info.Struct_Weapon_Info
+OpenAssetsAtExit=/Game/Combat/Interfaces/BPI_Has_Weapon.BPI_Has_Weapon
+OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
+OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
+OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Combat/Ranged/Components/BPC_Ranged_Attack.BPC_Ranged_Attack
+OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons.Struct_MeleeWeapons
+OpenAssetsAtExit=/Game/VFX/Spells/Base/NS_Base_Spell.NS_Base_Spell
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile
 
 [MessageLog]
@@ -571,6 +585,13 @@ LastLogListing=BlueprintLog
 /Game/Combat/Status_Effects/Structs_Tables=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
 /Game/VFX/Spells/Base=(R=0.358818,G=0.345576,B=0.467784,A=1.000000)
 /Game/VFX/Spells=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
+/Game/Combat/Weapons/Melee/BPs=(R=0.467784,G=0.342410,B=0.000000,A=1.000000)
+/Game/Combat/Weapons/Melee/Components=(R=0.000000,G=0.238028,B=0.467784,A=1.000000)
+/Game/Combat/Weapons/Melee/Structs_Tables=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
+/Game/Combat/Weapons/BPs=(R=0.467784,G=0.342410,B=0.000000,A=1.000000)
+/Game/Combat/Weapons/Melee/Enums=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
+/Game/Combat/Weapons/Struct_Tables=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
+/Game/Combat/Weapons/Enums=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1278,6 +1299,27 @@ ProjectileMovementComponent.Cooking=True
 ProjectileMovementComponent.Events=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+BPC_Ranged_Attack_C.ComponentTick=True
+BPC_Ranged_Attack_C.Tags=True
+BPC_Ranged_Attack_C.ComponentReplication=True
+BPC_Ranged_Attack_C.Activation=True
+BPC_Ranged_Attack_C.Variable=True
+BPC_Ranged_Attack_C.Cooking=True
+BPC_AttackHandler_C.Variable=True
+BPC_AttackHandler_C.Sockets=True
+BPC_AttackHandler_C.Tags=True
+BPC_AttackHandler_C.ComponentTick=True
+BPC_AttackHandler_C.ComponentReplication=True
+BPC_AttackHandler_C.Activation=True
+BPC_AttackHandler_C.Cooking=True
+BPC_AttackHandler_C.Events=True
+BPC_Ranged_Attack_C.Sockets=True
+BPC_Ranged_Attack_C.Events=True
+BP_WeaponParent_C.Default=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+Struct_MeleeWeapons.None=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1455,6 +1497,10 @@ K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+S_MeleeWeapon=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
+Struct_MeleeWeapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
+Struct_Weapon_Info=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
+Struct_Ranged_Weapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1464,38 +1510,39 @@ GameMapsSettings=True
 GameMapsSettings.DefaultModes=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/VFX/Spells/Base/NS_Base_Spell
-MRUItem1=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem2=/Game/Health/Components/BPC_Death
-MRUItem3=/Game/Health/Structs_Tables/Struct_Health_Info
-MRUItem4=/Game/Health/Enums/Enum_Death_Types
-MRUItem5=/Game/Health/Components/BPC_Health
-MRUItem6=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Names
-MRUItem7=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells
-MRUItem8=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell
-MRUItem9=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Homing
-MRUItem10=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Split
-MRUItem11=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_AOE
-MRUItem12=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Piercing
-MRUItem13=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Burst
-MRUItem14=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Instant
-MRUItem15=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Charge
-MRUItem16=/Game/Combat/Ranged/Projectiles/Enums/Spell_Shapes
-MRUItem17=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
-MRUItem18=/Game/Combat/Status_Effects/Enums/Enum_Status_Effects
-MRUItem19=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
-MRUItem20=/Game/Movement/Footfalls/BPC_Footfalls
-MRUItem21=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem22=/Game/Assets/Animations/Assets/Locomtion(TEMP)/LeftStrafeWalking_UE
-MRUItem23=/Game/Assets/Animations/Assets/Locomtion(TEMP)/LeftStrafe_UE
-MRUItem24=/Game/_UE_Content/Characters/Mannequins/Animations/ABP_Manny
-MRUItem25=/Game/Combat/Components/BPC_AttackHandler
-MRUItem26=/Game/Combat/Weapons/Melee/BPs/BP_WeaponParent
-MRUItem27=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem28=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem29=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem0=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem1=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem2=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
+MRUItem3=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
+MRUItem4=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem5=/Game/Combat/Interfaces/BPI_Has_Weapon
+MRUItem6=/Game/Combat/Components/BPC_AttackHandler
+MRUItem7=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem8=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem9=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem10=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem11=/Game/VFX/Spells/Base/NS_Base_Spell
+MRUItem12=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem13=/Game/Health/Components/BPC_Death
+MRUItem14=/Game/Health/Structs_Tables/Struct_Health_Info
+MRUItem15=/Game/Health/Enums/Enum_Death_Types
+MRUItem16=/Game/Health/Components/BPC_Health
+MRUItem17=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Names
+MRUItem18=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells
+MRUItem19=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell
+MRUItem20=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Homing
+MRUItem21=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Split
+MRUItem22=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_AOE
+MRUItem23=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Piercing
+MRUItem24=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Burst
+MRUItem25=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Instant
+MRUItem26=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Charge
+MRUItem27=/Game/Combat/Ranged/Projectiles/Enums/Spell_Shapes
+MRUItem28=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem29=/Game/Combat/Status_Effects/Enums/Enum_Status_Effects
 
 [PlacementMode]
+RecentlyPlaced=/Game/VFX/Spells/Base/NS_Base_Spell.NS_Base_Spell;
 RecentlyPlaced=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion;
 RecentlyPlaced=/Game/VFX/Bloodsplosion/Niagara/NS_Bloodsplosion.NS_Bloodsplosion;
 RecentlyPlaced=/Game/VFX/Blood_Splatter/Niagara/NS_Blood_Effect.NS_Blood_Effect;
@@ -1555,6 +1602,7 @@ None=======
 /Game/Health/Structs_Tables/Struct_Health_Info.Struct_Health_Info=1
 /Game/Health/Components/BPC_Death.BPC_Death=1
 /Game/VFX/Spells/Base/NS_Base_Spell.NS_Base_Spell=0
+/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks.BPC_LightAttacks=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
